tests/specs/run/error_syntax/error_syntax.js.out
error: SyntaxError: Expected ',', got 'following'
  |
3 | (the following is a syntax error  ^^ ! )
  |      ~~~~~~~~~
    at [WILDCARD]/error_syntax.js:3:6
